--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <link href="./style.css" media="screen" rel="stylesheet">
     <?php require_once("./src/config/database.php"); ?>
   <meta charset="utf-8">
-  <title> registration </title>
+  <title> logIn </title>
   <link href="css/style.css" media="screen" rel="stylesheet">
   <link href= 'http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   </head> 
